--- a/README
+++ b/README
@@ -3,4 +3,4 @@
 #they can see the nav bar which provides them with more options
 #the user can search through breeds of the api
 #user can chose a breed and soon as the chose they will be alerted they will be exciting the page
-#the user can browse through the we
+#the user can browse through the dogs thars been donated to adopt 
